Fix header border visible on mobile map pages

--- a/style/devices/desktop.css
+++ b/style/devices/desktop.css
@@ -16,7 +16,6 @@ body {
 
 body.full-map .page-header {
     display: inline-block;
-    border-bottom-width: 0px;
 }
 
 form {
